--- a/index.html
+++ b/index.html
@@ -57,23 +57,186 @@ Created by pixpalette.com - online design magazine -->
                         <!-- Nav tabs -->
                         <ul class="nav nav-tabs" role="tablist">
                             <li role="presentation" class="active"><a href="#buyTicket" aria-controls="buyTicket"
-                                    role="tab" data-toggle="tab">Portfolio</a></li>
+                                    role="tab" data-toggle="tab">Portofolio</a></li>
+                            <li role="presentation"><a href="#career" aria-controls="career" role="tab"
+                                    data-toggle="tab">Perjalanan Karir</a></li>
                             <li role="presentation"><a href="#termCondition" aria-controls="termCondition" role="tab"
                                     data-toggle="tab">Tentangku</a></li>
                             <li role="presentation"><a href="https://bundet.com/" target="_blank">Blog</a></li>
                         </ul>
 
-                        <!-- Tab panes -->
                         <div class="tab-content">
+                            <!--
+                            PORTFOLIO
+                            -->
                             <div role="tabpanel" class="tab-pane fade in active" id="buyTicket">
                                 <div class="row" id="mycontent">
 
                                 </div>
                             </div>
-                            <div role="tabpanel" class="tab-pane fade" id="blog">
-                                <h4> Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit,<br> sed do eiusmod<br>
-                                    Pune 411058</h4><br>
+                            <!--
+                            CAREER
+                            -->
+                            <div role="tabpanel" class="tab-pane fade" id="career">
+                                <h3 class="page-title text-center">Timeline</h3>
+                                <ul class="timeline">
+                                    <li class="timeline-line"></li>
+                                    <li class="timeline-group">
+                                        <a href="#" class="btn btn-primary"><i class="fa fa-calendar"></i>
+                                            Today</a>
+                                    </li>
+                                </ul>
+                                <ul class="timeline">
+                                    <li class="timeline-line"></li>
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Minor Update
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    November 7, 2015</div>
+                                            </div>
+                                            <div class="timeline-content">
+                                                <ul>
+                                                    <li><code>CSS</code> added line 205 to 207 for <i>timeline
+                                                            date</i></li>
+                                                    <li><code>CSS</code> changed line @ 269 from <i>1199px to
+                                                            991px</i></li>
+                                                    <li><code>HTML</code> + <code>CSS</code> and many more ...
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <small class="text-muted">Timeline Footer</small>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <!-- OTHER -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Teknisi Elektronika
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    Apr 2011 - Apr 2013 · 2 th 1 bln
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · Batam</p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p>
+                                                    Saya memiliki pengalaman di industri semikonduktor melakukan
+                                                    berbagai perbaikan robotika pada merek besar seperti Sentry,
+                                                    Teradyne, Catalys, FTDI, Epson, Dymarch, MCT, Synax, MultiTest, dan
+                                                    Aseco.
+                                                </p>
+                                                <p>
+                                                    Tanggung jawab saya meliputi
+                                                    pemeliharaan preventif, pemecahan masalah, pengelolaan suku cadang,
+                                                    dan pemeliharaan,
+                                                    mengevaluasi data operasional untuk memastikan optimalisasi proses,
+                                                    mengelola banyak tugas dengan fokus pada kualitas,
+                                                    menangani proses perbaikan, pemeriksaan kesehatan, dan tinjauan
+                                                    stabilitas teknologi,
+                                                    menyelesaikan insiden non-standar di jalur produksi,
+                                                    berpartisipasi dalam forum keselamatan dan tim tanggap darurat.
+                                                </p>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">PT. Unisem</normal>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <!-- UNISEM -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Teknisi Elektronika
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    Apr 2011 - Apr 2013 · 2 th 1 bln
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · Batam</p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p>
+                                                    Saya memiliki pengalaman di industri semikonduktor melakukan
+                                                    berbagai perbaikan robotika pada merek besar seperti Sentry,
+                                                    Teradyne, Catalys, FTDI, Epson, Dymarch, MCT, Synax, MultiTest, dan
+                                                    Aseco.
+                                                </p>
+                                                <p>
+                                                    Tanggung jawab saya meliputi
+                                                    pemeliharaan preventif, pemecahan masalah, pengelolaan suku cadang,
+                                                    dan pemeliharaan,
+                                                    mengevaluasi data operasional untuk memastikan optimalisasi proses,
+                                                    mengelola banyak tugas dengan fokus pada kualitas,
+                                                    menangani proses perbaikan, pemeriksaan kesehatan, dan tinjauan
+                                                    stabilitas teknologi,
+                                                    menyelesaikan insiden non-standar di jalur produksi,
+                                                    berpartisipasi dalam forum keselamatan dan tim tanggap darurat.
+                                                </p>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">PT. Unisem</normal>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <ul class="timeline">
+                                    <li class="timeline-line"></li>
+                                    <li class="timeline-group">
+                                        <a href="#" class="btn btn-primary"><i class="fa fa-calendar"></i>
+                                            2011</a>
+                                    </li>
+                                </ul>
+                                <!--BETO GAME-->
+                                <ul class="timeline">
+                                    <li class="timeline-line"></li><!-- /.timeline-line -->
+                                    <li class="timeline-item block">
+                                        <div class="timeline-badge"><a rel="tooltip" title="" data-context="inverse"
+                                                data-container="body" class="border-silc" href="#"
+                                                data-original-title="block highlight"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-content">
+                                                <div class="text-center">
+                                                    <p>
+                                                        <a href="#" class="kit-avatar kit-avatar-64">
+                                                            <i class="fa fa-bolt" style="font-size:64px;"></i>
+                                                        </a>
+                                                    </p>
+                                                    <h4>Teknisi Elektronika</h4>
+                                                    <p class="timeline-date"><i class="fa fa-clock-o"></i> Nov 2009 -
+                                                        Feb 2011 · 1 th 4 bln</p>
+                                                    <p>Full-time · Yogyakarta</p>
+                                                    <p>Saya memiliki pengalaman dalam memperbaiki berbagai game console
+                                                        dari merek ternama seperti Sony PlayStation, Microsoft Xbox, dan
+                                                        Nintendo. Masalah umum seperti port USB rusak, CD macet, masalah
+                                                        memori, atau kerusakan sederhana biasanya dapat diperbaiki dalam
+                                                        satu hari, bahkan bisa ditunggu. Sedangkan masalah perangkat
+                                                        keras yang lebih kompleks mungkin memerlukan waktu beberapa hari
+                                                        untuk perbaikan.</p>
+                                                    <!-- <div class="timeline-embed">
+                                                        <iframe
+                                                            src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15936.386801163795!2d101.61008935000001!3d3.0688275999999997!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2smy!4v1446881552869"
+                                                            width="478" height="320" frameborder="0" style="border:0"
+                                                            allowfullscreen></iframe>
+                                                    </div> -->
+                                                </div>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <div class="text-center">
+                                                    <normal class="text-muted">Beto Game</normal>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
                             </div>
+                            <!--
+                            ABOUT ME
+                            -->
                             <div role="tabpanel" class="tab-pane fade" id="termCondition">
                                 <h4>Pengembang aplikasi Android berorientasi pada pengalaman pengguna yang baik.
                                     Mengkonseptualisasikan solusi aplikasi dengan teknologi terkini dan desain UI/UX
