--- a/index.html
+++ b/index.html
@@ -88,62 +88,83 @@ Created by pixpalette.com - online design magazine -->
                                 </ul>
                                 <ul class="timeline">
                                     <li class="timeline-line"></li>
+                                    <!-- BUNDET -->
                                     <li class="timeline-item">
                                         <div class="timeline-badge"><a href="#"></a></div>
                                         <div class="timeline-panel">
                                             <div class="timeline-heading">
-                                                Minor Update
+                                                SEO Specialist & Web Developer
                                                 <div class="timeline-date"><i class="fa fa-clock-o"></i>
-                                                    November 7, 2015</div>
+                                                    Aug 2015 - Sep 2019 · 4 th 2 bln
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · Yogyakarta
+                                                </p>
                                             </div>
+
                                             <div class="timeline-content">
+                                                <p>
+                                                    Sebagai Pengembang Web, saya memiliki pengalaman sebagai pengembang
+                                                    web full-stack. Saya mengembangkan profil web dengan fitur katalog
+                                                    dan keranjang untuk sebuah perusahaan kopi di Jogja.</P>
+
+                                                <P> Sebagai SEO Specialist, saya memiliki pengalaman di bidang SEO untuk
+                                                    Google dan Bing dengan mengamati perilaku crawler atau spider mereka
+                                                    melalui studi kasus di blog pribadi saya:</P>
                                                 <ul>
-                                                    <li><code>CSS</code> added line 205 to 207 for <i>timeline
-                                                            date</i></li>
-                                                    <li><code>CSS</code> changed line @ 269 from <i>1199px to
-                                                            991px</i></li>
-                                                    <li><code>HTML</code> + <code>CSS</code> and many more ...
-                                                    </li>
+                                                    <li><code>gatewan.com</code>: niche teknologi (terjual)</li>
+                                                    <li><code>totaltren.com</code>: niche umum (terjual)</li>
+                                                    <li><code>santaiarea.com</code>: niche liburan (terjual)</li>
                                                 </ul>
+                                                <br>
+                                                <P> Saya menggunakan teknik "blackhat" dan "whitehat" selama proyek ini.
+                                                </p>
                                             </div>
                                             <div class="timeline-footer">
-                                                <small class="text-muted">Timeline Footer</small>
+                                                <normal class="text-muted">Gatewan a.k.a Bundet a.k.a Gaexe</normal>
                                             </div>
                                         </div>
                                     </li>
-                                    <!-- OTHER -->
+                                    <!-- EROKSA -->
                                     <li class="timeline-item">
                                         <div class="timeline-badge"><a href="#"></a></div>
                                         <div class="timeline-panel">
                                             <div class="timeline-heading">
                                                 Teknisi Elektronika
                                                 <div class="timeline-date"><i class="fa fa-clock-o"></i>
-                                                    Apr 2011 - Apr 2013 · 2 th 1 bln
+                                                    Sep 2013 - Nov 2016 · 3 th 3 bln
                                                 </div>
-                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · Batam</p>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · Yogyakarta
+                                                </p>
                                             </div>
 
                                             <div class="timeline-content">
                                                 <p>
-                                                    Saya memiliki pengalaman di industri semikonduktor melakukan
-                                                    berbagai perbaikan robotika pada merek besar seperti Sentry,
-                                                    Teradyne, Catalys, FTDI, Epson, Dymarch, MCT, Synax, MultiTest, dan
-                                                    Aseco.
+                                                    Seseorang menjuluki saya "SUPERMAN" karena saya melakukan apapun
+                                                    yang diminta atasan saya. Terkadang saya berperan sebagai asisten
+                                                    surveyor, desainer, teknisi elektronik, asisten operasional, kurir,
+                                                    dan masih banyak lagi.
                                                 </p>
+                                                <div class="timeline-embed">
+                                                    <iframe src="documents/eroksa-certificate.pdf" width="100%"
+                                                        height="320" frameborder="0" style="border:0"
+                                                        allowfullscreen></iframe>
+                                                </div>
+                                                <br>
                                                 <p>
-                                                    Tanggung jawab saya meliputi
-                                                    pemeliharaan preventif, pemecahan masalah, pengelolaan suku cadang,
-                                                    dan pemeliharaan,
-                                                    mengevaluasi data operasional untuk memastikan optimalisasi proses,
-                                                    mengelola banyak tugas dengan fokus pada kualitas,
-                                                    menangani proses perbaikan, pemeriksaan kesehatan, dan tinjauan
-                                                    stabilitas teknologi,
-                                                    menyelesaikan insiden non-standar di jalur produksi,
-                                                    berpartisipasi dalam forum keselamatan dan tim tanggap darurat.
+                                                    Bagi saya, desain grafis bukanlah tentang ekspresi pribadi (saya
+                                                    melakukannya di banyak tempat). Ini juga bukan tentang mendapatkan
+                                                    nilai tinggi pada standar estetika (estetika yang tinggi
+                                                    tidak selalu tepat). Ini adalah tentang memecahkan masalah
+                                                    komunikasi, dan kreativitas saya terletak pada cara saya
+                                                    menyelesaikannya.
                                                 </p>
+                                                <div class="timeline-embed">
+                                                    <iframe src="documents/eroksa-profile.pdf" width="100%" height="320"
+                                                        frameborder="0" style="border:0" allowfullscreen></iframe>
+                                                </div>
                                             </div>
                                             <div class="timeline-footer">
-                                                <normal class="text-muted">PT. Unisem</normal>
+                                                <normal class="text-muted">PT. Eroksa Graha Teknika</normal>
                                             </div>
                                         </div>
                                     </li>
@@ -156,7 +177,7 @@ Created by pixpalette.com - online design magazine -->
                                                 <div class="timeline-date"><i class="fa fa-clock-o"></i>
                                                     Apr 2011 - Apr 2013 · 2 th 1 bln
                                                 </div>
-                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · Batam</p>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Contract · Batam</p>
                                             </div>
 
                                             <div class="timeline-content">
@@ -177,6 +198,11 @@ Created by pixpalette.com - online design magazine -->
                                                     menyelesaikan insiden non-standar di jalur produksi,
                                                     berpartisipasi dalam forum keselamatan dan tim tanggap darurat.
                                                 </p>
+                                                <div class="timeline-embed">
+                                                    <iframe src="documents/unisem-certificate.pdf" width="100%"
+                                                        height="320" frameborder="0" style="border:0"
+                                                        allowfullscreen></iframe>
+                                                </div>
                                             </div>
                                             <div class="timeline-footer">
                                                 <normal class="text-muted">PT. Unisem</normal>
@@ -455,9 +481,7 @@ Fitur utamanya seperti Push notification, Connect midtrans, List product, Cart, 
                 price_display: "Production",
                 description: `
 Lesja adalah aplikasi manajemen stok yang berfokus pada audit harga dan produksi barang, dibuat khusus untuk Lestari Jaya (salah satu supplier spare part otomotif di Semarang). Audit stok lebih mudah dilakukan dimana saja dan kapan saja.
-Fitur utamanya seperti Setting harga, Audit stok, Mutasi stok, Pemusnahan stok, Assembly, Repacking.
-<br><br>
-Tech stack: Push notification
+Fitur utamanya seperti Setting harga, Audit stok, Mutasi stok, Pemusnahan stok, Assembly, Repacking. Tech stack: Push notification
 `
             },
             {
