--- a/index.html
+++ b/index.html
@@ -88,6 +88,38 @@ Created by pixpalette.com - online design magazine -->
                                 </ul>
                                 <ul class="timeline">
                                     <li class="timeline-line"></li>
+                                    <!-- HFW -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Android Developer
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    Dec 2018 - Oct 2019 · 11 bln
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · Yogyakarta
+                                                </p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p>
+                                                    Saya telah terlibat dalam proyek-proyek berikut:
+                                                <ul>
+                                                    <li>1. Aplikasi Obrolan (Chatrox)</li>
+                                                    <li>2. Aplikasi Wali Murid (ESDA)</li>
+                                                    <li>3. Prototipe Mekanik Online (Supercar)</li>
+                                                </ul>
+                                                </P>
+                                                <P> Tech stack: Android Studio, Java, Kotlin, JavaScript, XML, Linux,
+                                                    Node.js, VPS, GitLab, Firebase, Konsol Pengembang Google, Konsol
+                                                    Google Play, YouTube, Google Maps, Retrofit, WebRTC, Coturn, Tukang
+                                                    Pos, dll.</P>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">HFW Teknologi</normal>
+                                            </div>
+                                        </div>
+                                    </li>
                                     <!-- BUNDET -->
                                     <li class="timeline-item">
                                         <div class="timeline-badge"><a href="#"></a></div>
@@ -118,6 +150,10 @@ Created by pixpalette.com - online design magazine -->
                                                 <br>
                                                 <P> Saya menggunakan teknik "blackhat" dan "whitehat" selama proyek ini.
                                                 </p>
+                                                <br>
+                                                <p>Pencapaian</p>
+                                                <a href="https://www.linkedin.com/feed/update/urn:li:activity:7219164689987989504/"
+                                                    target="_blank">Gatewan Sebagai Winning Product</a>
                                             </div>
                                             <div class="timeline-footer">
                                                 <normal class="text-muted">Gatewan a.k.a Bundet a.k.a Gaexe</normal>
@@ -594,7 +630,18 @@ PH7 Network adalah perusahaan terapis di Yogyakarta. Ini adalah proyek skripsi m
 Aplikasi broker untuk menyimpan nilai dari fiat ke dinar atau dirham yang berbasis di Yogyakarta. Saya telah berkontribusi dalam memperbaiki bug dan meningkatkan UI/UX.
 `
             },
-
+            {
+                img: "images/webcoffee.jpg",
+                hyperlink: "https://gitlab.com/gaexe/webcoffee",
+                alert: "Akses ke repository tidak tersedia!",
+                title: "Coffee Shop",
+                sub_title: "CodeIgniter",
+                price_value: 180000,
+                price_display: "Web",
+                description: `
+Sebuah project jonki skripshit untuk membantu sobat, guna merealisasikan konsep web profile sebuah kedai kopi di Jogja.
+`
+            },
 
         ];
 
