--- a/index.html
+++ b/index.html
@@ -88,6 +88,136 @@ Created by pixpalette.com - online design magazine -->
                                 </ul>
                                 <ul class="timeline">
                                     <li class="timeline-line"></li>
+                                    <!-- SIP -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Mobile Developer
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    Jul 2021 - Present · 3 th 1 bln
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · On-site ·
+                                                    Semarang</p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p>
+                                                    Bertanggung jawab mengembangkan sistem rekam medis menggunakan
+                                                    Flutter, mengembangkan sistem informasi perkantoran menggunakan
+                                                    Kotlin, membantu manajemen dalam membuat konsep desain UI/UX
+                                                    menggunakan Figma, memberikan pelatihan kepada peserta magang dalam
+                                                    pengembangan aplikasi Android.
+                                                </p>
+                                                <p>
+                                                    Pencapaian:
+                                                <ul>
+                                                    <li>Medical Application (development)</li>
+                                                    <li>OIS Application (production)</li>
+                                                </ul>
+                                                </p>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">PT. Sumber Inokreasi Pratama</normal>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <!-- MITRAPTEK -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Mobile Developer
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    Mar 2020 - Present · 4 th 5 bln
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Part-time · Remote ·
+                                                    Semarang</p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p>
+                                                    Bertanggung jawab mengembangkan aplikasi informasi penjualan
+                                                    menggunakan Kotlin, membuat spesifikasi kebutuhan perangkat lunak
+                                                    (SRS) dan manual, membantu manajemen dalam membuat konsep desain
+                                                    UI/UX menggunakan Figma.
+                                                </p>
+                                                <p>
+                                                    Pencapaian:
+                                                <ul>
+                                                    <li>Asahy Salesman (production)</li>
+                                                    <li>BatisiTHIK (production)</li>
+                                                    <li>Lesja (production)</li>
+                                                    <li>MySales Application (production)</li>
+                                                    <li>Ordering Application (prototype)</li>
+                                                    <li>Simpeldis (prototype)</li>
+                                                </ul>
+                                                </p>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">PT. Mitra Aplikasi Teknologi</normal>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <!-- KARAMEL -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Mobile Developer
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    Jan 2020 - Mar 2024 · 4 th 3 bln
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Freelance · Remote ·
+                                                    Yogyakarta</p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p>
+                                                    Berkontribusi pada pengembangan aplikasi Android atau iOS
+                                                    menggunakan Flutter, Kotlin, atau Swift, memperbaiki bug,
+                                                    mengoptimalkan UI/UX, dan mendeploynya ke playstore dan appstore.
+                                                </p>
+                                                <p>
+                                                    Pencapaian:
+                                                <ul>
+                                                    <li>UNS Pay (prototipe)</li>
+                                                    <li>PH7 (prototipe)</li>
+                                                    <li>Madanium (prototipe)</li>
+                                                    <li>Pasar Kreator (produksi)</li>
+                                                </ul>
+                                                </p>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">Karamel.id</normal>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <!-- TRIJUNA -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Android Developer
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    Oct 2022 - Nov 2022 · 2 bln
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Freelance · Remote ·
+                                                    Semarang
+                                                </p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p>
+                                                    Bertanggung jawab mengembangkan aplikasi SIMBOK-KU (produksi)
+                                                    perjalanan menggunakan Flutter dan mengintegrasikan ke Mindtrans.
+                                                </p>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">CV. Trijuna Pratama</normal>
+                                            </div>
+                                        </div>
+                                    </li>
                                     <!-- HFW -->
                                     <li class="timeline-item">
                                         <div class="timeline-badge"><a href="#"></a></div>
@@ -97,7 +227,8 @@ Created by pixpalette.com - online design magazine -->
                                                 <div class="timeline-date"><i class="fa fa-clock-o"></i>
                                                     Dec 2018 - Oct 2019 · 11 bln
                                                 </div>
-                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · Yogyakarta
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · On-site ·
+                                                    Yogyakarta
                                                 </p>
                                             </div>
 
@@ -129,7 +260,8 @@ Created by pixpalette.com - online design magazine -->
                                                 <div class="timeline-date"><i class="fa fa-clock-o"></i>
                                                     Aug 2015 - Sep 2019 · 4 th 2 bln
                                                 </div>
-                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · Yogyakarta
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · On-site ·
+                                                    Yogyakarta
                                                 </p>
                                             </div>
 
@@ -169,7 +301,8 @@ Created by pixpalette.com - online design magazine -->
                                                 <div class="timeline-date"><i class="fa fa-clock-o"></i>
                                                     Sep 2013 - Nov 2016 · 3 th 3 bln
                                                 </div>
-                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · Yogyakarta
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Full-time · On-site ·
+                                                    Yogyakarta
                                                 </p>
                                             </div>
 
@@ -213,7 +346,8 @@ Created by pixpalette.com - online design magazine -->
                                                 <div class="timeline-date"><i class="fa fa-clock-o"></i>
                                                     Apr 2011 - Apr 2013 · 2 th 1 bln
                                                 </div>
-                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Contract · Batam</p>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Contract · On-site ·
+                                                    Batam</p>
                                             </div>
 
                                             <div class="timeline-content">
@@ -271,7 +405,7 @@ Created by pixpalette.com - online design magazine -->
                                                     <h4>Teknisi Elektronika</h4>
                                                     <p class="timeline-date"><i class="fa fa-clock-o"></i> Nov 2009 -
                                                         Feb 2011 · 1 th 4 bln</p>
-                                                    <p>Full-time · Yogyakarta</p>
+                                                    <p>Full-time · On-site · Yogyakarta</p>
                                                     <p>Saya memiliki pengalaman dalam memperbaiki berbagai game console
                                                         dari merek ternama seperti Sony PlayStation, Microsoft Xbox, dan
                                                         Nintendo. Masalah umum seperti port USB rusak, CD macet, masalah
