--- a/index.html
+++ b/index.html
@@ -446,6 +446,69 @@ Created by pixpalette.com - online design magazine -->
                                 </ul>
                                 <ul class="timeline">
                                     <li class="timeline-line"></li>
+                                    <!-- STMIK EL Rahma Yogyakarta -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Sarjana
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    2013 - 2015
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Grade: Swasta (B)</p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p>Saya telah mempelajari dasar-dasar ilmu komputer.</p>
+                                                <p>Dalam rangka mengenang simbol perjuangan saya dalam menuntaskan
+                                                    program studi S1 Teknik Informatika, berikut saya persembahkan
+                                                    sebuah aplikasi bernama "MySigSag"</p>
+                                                <p>MySIGSAG adalah singkatan dari <b>Sistem Informasi Geografis Salam
+                                                        Aspal Gronjal</b> terinspirasi oleh teman yang sekarang sudah
+                                                    resmi menjadi saudara yang pernah kecelakaan akibat jalan berlubang
+                                                    dan grup FB paling gaduh sejagat maya yaitu ICJ (Info Cegatan
+                                                    Jogja).</p>
+                                                <p>Selengkapnya dapat mengakses lampiran berikut ini:</p>
+                                                <ul>
+                                                    <li><a href="documents/skripsi-proposal.html"
+                                                            target="_blank">Proposal
+                                                            Skripsi</a></li>
+                                                    <li><a href="documents/skripsi-poster.jpg" target="_blank">Poster
+                                                            Skripsi</a></li>
+                                                    <li><a href="https://docs.google.com/presentation/d/1n_QhwQ4bN8I8ink9iIYyt7e0hRNFwYBX/edit?usp=sharing&ouid=101829399242424297476&rtpof=true&sd=true"
+                                                            target="_blank">Presentasi Skripsi</a></li>
+                                                    <li><a href="documents/skripsi-jurnal.html" target="_blank">Jurnal
+                                                            Skripsi</a></li>
+                                                    <li><a href="documents/skripsi-laporan.html" target="_blank">Laporan
+                                                            Skripsi</a></li>
+                                                </ul>
+                                                <br>
+                                                <p>Selain itu saya juga telah menyelesaikan KKL dan Kerja Praktek
+                                                    sebagai syarat mengambil Skripsi, selengkapnya dapat mengakses
+                                                    lampiran berikut:</p>
+                                                <ul>
+                                                    <li><a href="documents/kkl-laporan.html" target="_blank">Laporan
+                                                            KKL</a></li>
+                                                    <li><a href="documents/kp-proposal.html" target="_blank">Proposal
+                                                            Kerja
+                                                            Praktek</a></li>
+                                                    <li><a href="documents/kp-jurnal.html" target="_blank">Jurnal Kerja
+                                                            Praktek</a></li>
+                                                    <li><a href="documents/kp-laporan.html" target="_blank">Laporan
+                                                            Kerja Praktek</a></li>
+                                                </ul>
+                                                <br>
+                                                <p>Ijazah</p>
+                                                <div class="timeline-embed">
+                                                    <iframe src="documents/sarjana-ijazah.pdf" width="100%" height="320"
+                                                        frameborder="0" style="border:0" allowfullscreen></iframe>
+                                                </div>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">STMIK EL Rahma Yogyakarta</normal>
+                                            </div>
+                                        </div>
+                                    </li>
                                     <!-- SMKN 2 Yogyakarta -->
                                     <li class="timeline-item">
                                         <div class="timeline-badge"><a href="#"></a></div>
@@ -468,6 +531,8 @@ Created by pixpalette.com - online design magazine -->
                                                     disana, tapi saya profesional :D</p>
                                                 <p>Saya telah mempelajari dasar pemrograman mikrokontroler dan pemecahan
                                                     masalah elektronik konsumen</p>
+
+                                                <p>Ijazah</p>
                                                 <div class="timeline-embed">
                                                     <iframe src="documents/smk-ijazah.pdf" width="100%" height="320"
                                                         frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -501,6 +566,7 @@ Created by pixpalette.com - online design magazine -->
                                                 <p> Hanya lulusan sekolah menengah pertama. Setiap hari adalah hari
                                                     belajar.
                                                 </p>
+                                                <p>Ijazah</p>
                                                 <div class="timeline-embed">
                                                     <iframe src="documents/smp-ijazah.pdf" width="100%" height="320"
                                                         frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -540,6 +606,7 @@ Created by pixpalette.com - online design magazine -->
                                                     <p>Grade: Negeri</p>
                                                     <p> Hanya lulusan sekolah dasar. Setiap hari adalah hari bermain.
                                                     </p>
+                                                    <p>Ijazah</p>
                                                     <div class="timeline-embed">
                                                         <iframe src="documents/sd-ijazah.pdf" width="100%" height="320"
                                                             frameborder="0" style="border:0" allowfullscreen></iframe>
