tambah sertifikat magang

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ Created by pixpalette.com - online design magazine -->
                                             <div class="timeline-heading">
                                                 Sarjana
                                                 <div class="timeline-date"><i class="fa fa-clock-o"></i>
-                                                    2013 - 2015
+                                                    2013 - 2018
                                                 </div>
                                                 <p style="font-size: 14px; margin: 8px 0 4px 0;">Grade: Swasta (B)</p>
                                             </div>
@@ -483,7 +483,8 @@ Created by pixpalette.com - online design magazine -->
                                                             Skripsi</a></li>
                                                 </ul>
                                                 <br>
-                                                <p>Selain itu saya juga telah menyelesaikan KKL dan Kerja Praktek
+                                                <p>Selain itu saya juga telah menyelesaikan KKL, Kerja Praktek dan
+                                                    Seminar
                                                     sebagai syarat mengambil Skripsi, selengkapnya dapat mengakses
                                                     lampiran berikut:</p>
                                                 <ul>
@@ -496,6 +497,12 @@ Created by pixpalette.com - online design magazine -->
                                                             Praktek</a></li>
                                                     <li><a href="documents/kp-laporan.html" target="_blank">Laporan
                                                             Kerja Praktek</a></li>
+                                                    <li><a href="documents/seminar-cyber-security.pdf"
+                                                            target="_blank">Seminar Cyber Security</a></li>
+                                                    <li><a href="documents/seminar-wirausaha.pdf"
+                                                            target="_blank">Seminar Wirausaha</a></li>
+                                                    <li><a href="documents/seminar-cyber-security.pdf"
+                                                            target="_blank">Juara 1 Pekan Kreatif Mahasiswa</a></li>
                                                 </ul>
                                                 <br>
                                                 <p>Ijazah</p>
@@ -530,19 +537,19 @@ Created by pixpalette.com - online design magazine -->
                                                     menarik di sekolah saya. Bukan keinginan saya untuk bergabung
                                                     disana, tapi saya profesional :D</p>
                                                 <p>Saya telah mempelajari dasar pemrograman mikrokontroler dan pemecahan
-                                                    masalah elektronik konsumen</p>
-
+                                                    masalah elektronik konsumen. Berikut saya lampirkan juga beberapa
+                                                    dokumen pendukung:</p>
+                                                <ul>
+                                                    <li><a href="documents/smk-magang-qumicon.pdf"
+                                                            target="_blank">Sertifikat Magang Mikrokontroler</a></li>
+                                                    <li><a href="documents/smk-magang-gemini.pdf"
+                                                            target="_blank">Sertifikat Magang Reparasi</a></li>
+                                                </ul>
+                                                <br>
                                                 <p>Ijazah</p>
                                                 <div class="timeline-embed">
                                                     <iframe src="documents/smk-ijazah.pdf" width="100%" height="320"
                                                         frameborder="0" style="border:0" allowfullscreen></iframe>
-                                                </div>
-                                                <br>
-                                                <p>Sertifikat PKL</p>
-                                                <div class="timeline-embed">
-                                                    <iframe src="documents/smk-certificate-qumicon.pdf" width="100%"
-                                                        height="320" frameborder="0" style="border:0"
-                                                        allowfullscreen></iframe>
                                                 </div>
                                             </div>
                                             <div class="timeline-footer">
