--- a/index.html
+++ b/index.html
@@ -446,6 +446,31 @@ Created by pixpalette.com - online design magazine -->
                                 </ul>
                                 <ul class="timeline">
                                     <li class="timeline-line"></li>
+                                    <!-- Dicoding -->
+                                    <li class="timeline-item">
+                                        <div class="timeline-badge"><a href="#"></a></div>
+                                        <div class="timeline-panel">
+                                            <div class="timeline-heading">
+                                                Profesional
+                                                <div class="timeline-date"><i class="fa fa-clock-o"></i>
+                                                    2016 - Sekarang
+                                                </div>
+                                                <p style="font-size: 14px; margin: 8px 0 4px 0;">Grade: Swasta (A)</p>
+                                            </div>
+
+                                            <div class="timeline-content">
+                                                <p>Fokus mendalami ilmu pemrograman mobile untuk ekosistem Android dan
+                                                    iOS menggunakan bahasa kotlin, swift, dan flutter</p>
+                                                <p>Selengkapnya dapat mengakses lampiran berikut:</p>
+                                                <ul>
+                                                    <li><a href="#" target="_blank">Coming soon...</a></li>
+                                                </ul>
+                                            </div>
+                                            <div class="timeline-footer">
+                                                <normal class="text-muted">Dicoding</normal>
+                                            </div>
+                                        </div>
+                                    </li>
                                     <!-- STMIK EL Rahma Yogyakarta -->
                                     <li class="timeline-item">
                                         <div class="timeline-badge"><a href="#"></a></div>
@@ -464,11 +489,11 @@ Created by pixpalette.com - online design magazine -->
                                                     program studi S1 Teknik Informatika, berikut saya persembahkan
                                                     sebuah aplikasi bernama "MySigSag"</p>
                                                 <p>MySIGSAG adalah singkatan dari <b>Sistem Informasi Geografis Salam
-                                                        Aspal Gronjal</b> terinspirasi oleh teman yang sekarang sudah
-                                                    resmi menjadi saudara yang pernah kecelakaan akibat jalan berlubang
+                                                        Aspal Gronjal</b> terinspirasi oleh saudara yang pernah
+                                                    kecelakaan akibat jalan berlubang
                                                     dan grup FB paling gaduh sejagat maya yaitu ICJ (Info Cegatan
                                                     Jogja).</p>
-                                                <p>Selengkapnya dapat mengakses lampiran berikut ini:</p>
+                                                <p>Selengkapnya dapat mengakses lampiran berikut:</p>
                                                 <ul>
                                                     <li><a href="documents/skripsi-proposal.html"
                                                             target="_blank">Proposal
