sertifikat android native

--- a/index.html
+++ b/index.html
@@ -461,9 +461,33 @@ Created by pixpalette.com - online design magazine -->
                                             <div class="timeline-content">
                                                 <p>Fokus mendalami ilmu pemrograman mobile untuk ekosistem Android dan
                                                     iOS menggunakan bahasa kotlin, swift, dan flutter</p>
-                                                <p>Selengkapnya dapat mengakses lampiran berikut:</p>
+                                                <p>Selengkapnya dapat mengakses lampiran sertifikat berikut:</p>
                                                 <ul>
-                                                    <li><a href="#" target="_blank">Coming soon...</a></li>
+                                                    <li><a href="https://www.dicoding.com/certificates/MEPJK95ELX3V"
+                                                            target="_blank">Aplikasi Android Jetpack Compose
+                                                        </a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/MRZMG1JYKZYQ"
+                                                            target="_blank">Android Jetpack Pro</a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/L4PQMVWO4ZO1"
+                                                            target="_blank">Aplikasi Android Expert Kotlin</a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/6RPN6W7M5P2M"
+                                                            target="_blank">Aplikasi Android Intermediate</a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/JMZVMO08OZN9"
+                                                            target="_blank">Aplikasi Android Fundamental</a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/07Z6LYQO2PQR"
+                                                            target="_blank">Aplikasi Android untuk Pemula</a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/53XEERM2RXRN"
+                                                            target="_blank">Aplikasi Android HTML5</a>
+                                                    </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/07Z6L25JRPQR"
+                                                            target="_blank">Prinsip Pemrograman SOLID</a>
+                                                    </li>
                                                 </ul>
                                             </div>
                                             <div class="timeline-footer">
