finishing android native certificate

--- a/index.html
+++ b/index.html
@@ -468,10 +468,10 @@ Created by pixpalette.com - online design magazine -->
                                                         </a>
                                                     </li>
                                                     <li><a href="https://www.dicoding.com/certificates/MRZMG1JYKZYQ"
-                                                            target="_blank">Android Jetpack Pro</a>
+                                                            target="_blank">Aplikasi Android Jetpack Pro</a>
                                                     </li>
                                                     <li><a href="https://www.dicoding.com/certificates/L4PQMVWO4ZO1"
-                                                            target="_blank">Aplikasi Android Expert Kotlin</a>
+                                                            target="_blank">Aplikasi Android Expert</a>
                                                     </li>
                                                     <li><a href="https://www.dicoding.com/certificates/6RPN6W7M5P2M"
                                                             target="_blank">Aplikasi Android Intermediate</a>
@@ -479,8 +479,11 @@ Created by pixpalette.com - online design magazine -->
                                                     <li><a href="https://www.dicoding.com/certificates/JMZVMO08OZN9"
                                                             target="_blank">Aplikasi Android Fundamental</a>
                                                     </li>
+                                                    <li><a href="https://www.dicoding.com/certificates/2VX3N9VQVXYQ"
+                                                            target="_blank">Aplikasi Android Kotlin</a>
+                                                    </li>
                                                     <li><a href="https://www.dicoding.com/certificates/07Z6LYQO2PQR"
-                                                            target="_blank">Aplikasi Android untuk Pemula</a>
+                                                            target="_blank">Aplikasi Android Pemula</a>
                                                     </li>
                                                     <li><a href="https://www.dicoding.com/certificates/53XEERM2RXRN"
                                                             target="_blank">Aplikasi Android HTML5</a>
